
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int task_info_t ;
struct TYPE_2__ {scalar_t__ all_image_info_addr; } ;
typedef TYPE_1__ task_dyld_info_data_t ;
struct dyld_image_info {char* imageFilePath; int imageLoadAddress; } ;
struct dyld_all_image_infos {size_t infoArrayCount; struct dyld_image_info* infoArray; } ;
typedef scalar_t__ mach_vm_address_t ;
typedef int mach_msg_type_number_t ;
typedef int kern_return_t ;


 int TASK_DYLD_INFO ;
 int TASK_DYLD_INFO_COUNT ;
 int mach_task_self () ;
 scalar_t__ strstr (char const*,char const*) ;
 int task_info (int ,int ,int ,int *) ;

void* find_library_load_address(const char* library_name){
  kern_return_t err;




  task_dyld_info_data_t task_dyld_info;
  mach_msg_type_number_t count = TASK_DYLD_INFO_COUNT;
  err = task_info(mach_task_self(), TASK_DYLD_INFO, (task_info_t)&task_dyld_info, &count);

  const struct dyld_all_image_infos* all_image_infos = (const struct dyld_all_image_infos*)task_dyld_info.all_image_info_addr;
  const struct dyld_image_info* image_infos = all_image_infos->infoArray;

  for(size_t i = 0; i < all_image_infos->infoArrayCount; i++){
    const char* image_name = image_infos[i].imageFilePath;
    mach_vm_address_t image_load_address = (mach_vm_address_t)image_infos[i].imageLoadAddress;
    if (strstr(image_name, library_name)){
      return (void*)image_load_address;
    }
  }
  return ((void*)0);
}
