; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_35742.c_find_library_load_address.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/osx/local/extr_35742.c_find_library_load_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }
%struct.dyld_all_image_infos = type { i64, %struct.dyld_image_info* }
%struct.dyld_image_info = type { i8*, i32 }

@TASK_DYLD_INFO_COUNT = common dso_local global i32 0, align 4
@TASK_DYLD_INFO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @find_library_load_address(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_2__, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.dyld_all_image_infos*, align 8
  %8 = alloca %struct.dyld_image_info*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %12 = load i32, i32* @TASK_DYLD_INFO_COUNT, align 4
  store i32 %12, i32* %6, align 4
  %13 = call i32 (...) @mach_task_self()
  %14 = load i32, i32* @TASK_DYLD_INFO, align 4
  %15 = ptrtoint %struct.TYPE_2__* %5 to i32
  %16 = call i32 @task_info(i32 %13, i32 %14, i32 %15, i32* %6)
  store i32 %16, i32* %4, align 4
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to %struct.dyld_all_image_infos*
  store %struct.dyld_all_image_infos* %19, %struct.dyld_all_image_infos** %7, align 8
  %20 = load %struct.dyld_all_image_infos*, %struct.dyld_all_image_infos** %7, align 8
  %21 = getelementptr inbounds %struct.dyld_all_image_infos, %struct.dyld_all_image_infos* %20, i32 0, i32 1
  %22 = load %struct.dyld_image_info*, %struct.dyld_image_info** %21, align 8
  store %struct.dyld_image_info* %22, %struct.dyld_image_info** %8, align 8
  store i64 0, i64* %9, align 8
  br label %23

23:                                               ; preds = %49, %1
  %24 = load i64, i64* %9, align 8
  %25 = load %struct.dyld_all_image_infos*, %struct.dyld_all_image_infos** %7, align 8
  %26 = getelementptr inbounds %struct.dyld_all_image_infos, %struct.dyld_all_image_infos* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = icmp ult i64 %24, %27
  br i1 %28, label %29, label %52

29:                                               ; preds = %23
  %30 = load %struct.dyld_image_info*, %struct.dyld_image_info** %8, align 8
  %31 = load i64, i64* %9, align 8
  %32 = getelementptr inbounds %struct.dyld_image_info, %struct.dyld_image_info* %30, i64 %31
  %33 = getelementptr inbounds %struct.dyld_image_info, %struct.dyld_image_info* %32, i32 0, i32 0
  %34 = load i8*, i8** %33, align 8
  store i8* %34, i8** %10, align 8
  %35 = load %struct.dyld_image_info*, %struct.dyld_image_info** %8, align 8
  %36 = load i64, i64* %9, align 8
  %37 = getelementptr inbounds %struct.dyld_image_info, %struct.dyld_image_info* %35, i64 %36
  %38 = getelementptr inbounds %struct.dyld_image_info, %struct.dyld_image_info* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 8
  %40 = sext i32 %39 to i64
  store i64 %40, i64* %11, align 8
  %41 = load i8*, i8** %10, align 8
  %42 = load i8*, i8** %3, align 8
  %43 = call i64 @strstr(i8* %41, i8* %42)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %48

45:                                               ; preds = %29
  %46 = load i64, i64* %11, align 8
  %47 = inttoptr i64 %46 to i8*
  store i8* %47, i8** %2, align 8
  br label %53

48:                                               ; preds = %29
  br label %49

49:                                               ; preds = %48
  %50 = load i64, i64* %9, align 8
  %51 = add i64 %50, 1
  store i64 %51, i64* %9, align 8
  br label %23

52:                                               ; preds = %23
  store i8* null, i8** %2, align 8
  br label %53

53:                                               ; preds = %52, %45
  %54 = load i8*, i8** %2, align 8
  ret i8* %54
}

declare dso_local i32 @task_info(i32, i32, i32, i32*) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i64 @strstr(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
